# fastapi-serverless-starter

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  .tool-versions  Makefile  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
app/: main.py
app/routers/: health.py
infra/live/dev/: config.tf  locals.tf
infra/modules/lambda/: locals.tf  main.tf
infra/modules/layer/: locals.tf  main.tf  package_layer.sh
