[tool.poetry]
name = "fastapi-serverless-starter"
version = "0.1.0"
description = ""
authors = ["massimobiagioli <biagiolimassimo@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
mangum = "^0.17.0"
pre-commit = "^3.4.0"
pytest = "^7.4.2"
httpx = "^0.25.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
isort = "^5.12.0"
bandit = "^1.7.5"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
